Fixed z-index issues on global-progressbar

--- a/common/static/common/styles/studio/_navbar.scss
+++ b/common/static/common/styles/studio/_navbar.scss
@@ -19,10 +19,6 @@ body {
     margin-left: 0;
   }
 
-  .progress-bar {
-    height: 2px;
-  }
-
   .dropdown-menu {
     border-top: 1px solid $transparent;
   }
